--- a/index.html
+++ b/index.html
@@ -3,180 +3,242 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Masba Studio</title>
+  <title>Masba Studio | Custom T-Shirt Sublimation & Creative Design Malaysia</title>
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Masba Studio offers professional T-shirt sublimation printing, creative graphic design, video editing, and website design services in Malaysia. Perfect for individuals and businesses.">
+  <meta name="keywords" content="Masba Studio, sublimation printing Malaysia, custom T-shirt, graphic design, video editing, CapCut design, Canva, website design Malaysia, printing Perak">
+  <meta name="author" content="Masba Studio">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <link rel="shortcut icon" href="/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-  <meta name="apple-mobile-web-app-title" content="Masba Studio" />
-  <link rel="manifest" href="/site.webmanifest" />
-
-  <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css">
-  <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css">
-
+  <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
-<body>
 
+<body>
   <!-- Top Bar -->
   <div class="top-bar">
     <p>🎁 Free Shipping for orders over RM100</p>
   </div>
 
-  <!-- Header / Navigation -->
-  <header>
-    <div class="logo">
-      <img src="images/logo-masbastudio.png" alt="Masba Studio Logo">
-      <span>Masba Studio</span>
-    </div>
-    <div class="menu-toggle">&#9776;</div>
-    <nav class="nav-links">
-      <a href="index.html" class="active">Home</a>
-      <a href="products.html">Products</a>
-      <a href="services.html">Services</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-      <a href="catalog.html">Catalog</a>
-    </nav>
-  </header>
+<!-- Header -->
+<header>
+  <div class="logo">
+    <img src="images/logo-masbastudio.png" alt="Masba Studio Logo">
+    <span>Masba Studio</span>
+  </div>
 
-  <!-- Banner -->
-  <section class="banner">
-    <div class="banner-slideshow">
-      <img src="images/BUTTON BADGE PRINTING.jpg" alt="Banner 1" class="active">
-      <img src="images/CUSTOM BAGS PRINTING.jpg" alt="Banner 2">
-      <img src="images/CUSTOM MUG PRINTING.jpg" alt="Banner 3">
-      <img src="images/GIFT PRINTING.jpg" alt="Banner 4">
-      <img src="images/LANYARD + ID CARD PRINTING.png" alt="Banner 5">
-      <img src="images/T-SHIRT-PRINTING.png" alt="Banner 6">
+  <!-- Hamburger Menu -->
+  <div class="menu-toggle">&#9776;</div>
+
+  <!-- Navigation -->
+  <nav class="nav-links">
+    <a href="index.html" class="active">Home</a>
+    <a href="products.html">Products</a>
+    <a href="services.html">Services</a>
+    <a href="about-us.html">About Us</a>
+    <a href="catalog.html">Catalog</a>
+  </nav>
+</header>
+
+  <!-- Greeting Section -->
+  <section class="greeting">
+    <div class="greeting-container">
+      <h1>Welcome to <span>Masba Studio</span></h1>
+      <p>We specialize in <strong>T-Shirt Sublimation Printing</strong>, <strong>Graphic Design</strong>, <strong>Video Editing</strong>, and <strong>Simple Website Development</strong>. All crafted with creativity and passion to make your brand stand out.</p>
+      <a href="https://wa.me/60168590975?text=Hi%20Masba%20Studio!%20I'm%20interested%20in%20your%20services." 
+         class="cta-btn" target="_blank">📲 Chat with Us on WhatsApp</a>
     </div>
   </section>
 
   <!-- Features -->
   <section class="features">
-    <div class="feature"><i class="fi fi-ss-truck-side"></i> Free Shipping Over RM100</div>
-    <div class="feature"><i class="fi fi-sr-palette"></i> Custom Design Available</div>
-    <div class="feature"><i class="fi fi-sr-credit-card"></i> Secure Payment</div>
-    <div class="feature"><i class="fi fi-sr-headset"></i> 24/7 Support</div>
+    <div class="feature">
+      <span class="material-symbols-outlined">local_shipping</span>
+      <p>Free Shipping Over RM100</p>
+    </div>
+    <div class="feature">
+      <span class="material-symbols-outlined">brush</span>
+      <p>Custom Design Available</p>
+    </div>
+    <div class="feature">
+      <span class="material-symbols-outlined">credit_card</span>
+      <p>Secure Payment</p>
+    </div>
+    <div class="feature">
+      <span class="material-symbols-outlined">support_agent</span>
+      <p>24/7 Support</p>
+    </div>
   </section>
 
-  <!-- Shop by Category -->
-  <section class="categories">
-    <h2>Shop by Category</h2>
-    <div class="category-grid">
-      <div class="category-card">
-        <img src="images/category1.jpg" alt="T-Shirts">
-        <h3>T-Shirts</h3>
+  <!-- Our Services -->
+  <section class="services">
+    <h2>Our Services</h2>
+    <div class="services-container">
+      <div class="service-card">
+        <img src="images/tshirt.jpg" alt="T-Shirt Sublimation">
+        <h3>T-Shirt Sublimation</h3>
+        <p>High-quality custom T-shirt printing for events, brands, and gifts.</p>
       </div>
-      <div class="category-card">
-        <img src="images/category2.jpg" alt="Custom Design">
-        <h3>Custom Design</h3>
+
+      <div class="service-card">
+        <img src="images/design.jpg" alt="Graphic Design">
+        <h3>Graphic Design</h3>
+        <p>Creative and impactful visuals, posters, and logos for your business.</p>
       </div>
-      <div class="category-card">
-        <img src="images/category3.jpg" alt="Accessories">
-        <h3>Accessories</h3>
+
+      <div class="service-card">
+        <img src="images/video.jpg" alt="Video Editing">
+        <h3>Video Editing</h3>
+        <p>Clean, engaging, and promotional videos that boost your online presence.</p>
+      </div>
+
+      <div class="service-card">
+        <img src="images/website.jpg" alt="Website">
+        <h3>Simple Website</h3>
+        <p>Modern, mobile-friendly websites to showcase your products or services.</p>
       </div>
     </div>
   </section>
 
-  <div class="line"></div>
-
-  <!-- Best Sellers -->
-  <section class="products">
-    <h2>Best Sellers</h2>
-    <div class="product-grid">
-      <div class="product-card">
-        <img src="images/tshirt1.jpg" alt="T-shirt">
-        <h3>Graphic Tee</h3>
-        <p><span class="old-price">RM55.00</span> RM40.00</p>
-        <a class="whatsapp-btn" href="https://wa.me/60168590975?text=Hello%20Masba%20Studio!%20I%20want%20to%20order%20Graphic%20Tee%20(RM40.00)" target="_blank">Buy Now</a>
-      </div>
-      <div class="product-card">
-        <img src="images/tshirt2.jpg" alt="T-shirt">
-        <h3>Custom Sublimation</h3>
-        <p><span class="old-price">RM65.00</span> RM50.00</p>
-        <a class="whatsapp-btn" href="https://wa.me/60168590975?text=Hello%20Masba%20Studio!%20I%20want%20to%20order%20Custom%20Sublimation%20(RM50.00)" target="_blank">Buy Now</a>
-      </div>
-      <div class="product-card">
-        <img src="images/tshirt3.jpg" alt="T-shirt">
-        <h3>Sports Jersey</h3>
-        <p>RM60.00</p>
-        <a class="whatsapp-btn" href="https://wa.me/60168590975?text=Hello%20Masba%20Studio!%20I%20want%20to%20order%20Sports%20Jersey%20(RM60.00)" target="_blank">Buy Now</a>
-      </div>
-    </div>
-  </section>
-
-  <div class="line"></div>
-
-  <!-- Our Software -->
+  <!-- Creative Tools We Use -->
   <section class="software">
-    <h2>Software We Used</h2>
-    <div class="software-grid">
-      <div class="software-card">
-        <i class="fi fi-brands-photoshop"></i>
-        <h3>Adobe Photoshop</h3>
-        <p>Professional photo editing and T-shirt design software.</p>
-      </div>
-      <div class="software-card">
-        <i class="fi fi-brands-illustrator"></i>
-        <h3>Adobe Illustrator</h3>
-        <p>Perfect for vector logo design and print layouts.</p>
-      </div>
-      <div class="software-card">
-        <i class="fi fi-brands-canva"></i>
-        <h3>Canva</h3>
-        <p>Quick drag-and-drop tool for creative marketing designs.</p>
-      </div>
-      <div class="software-card">
-        <i class="fi fi-brands-capcut"></i>
-        <h3>CapCut</h3>
-        <p>Used for editing promotional videos and visual showcases.</p>
-      </div>
-      <div class="software-card">
-        <i class="fi fi-brands-affinity"></i>
-        <h3>Affinity Photo</h3>
-        <p>Lightweight and powerful photo editing software.</p>
+    <h2>Creative Tools We Use</h2>
+    <p class="section-subtitle">Our favorite design and editing software that help us bring ideas to life.</p>
+
+    <div class="tools-container slider-wrapper">
+      <div class="tools-slider slider" id="toolsSlider">
+        <div class="tool-card">
+          <img src="images/photoshop.png" alt="Photoshop">
+          <h3>Adobe Photoshop</h3>
+          <p>Professional photo editing and T-shirt design tool.</p>
+        </div>
+
+        <div class="tool-card">
+          <img src="images/illustrator.png" alt="Illustrator">
+          <h3>Adobe Illustrator</h3>
+          <p>Perfect for logos, vectors, and print layouts.</p>
+        </div>
+
+        <div class="tool-card">
+          <img src="images/canva.png" alt="Canva">
+          <h3>Canva</h3>
+          <p>Easy drag-and-drop tool for creative marketing visuals.</p>
+        </div>
+
+        <div class="tool-card">
+          <img src="images/capcut.png" alt="CapCut">
+          <h3>CapCut</h3>
+          <p>Used for editing promotional videos and reels.</p>
+        </div>
+
+        <div class="tool-card">
+          <img src="images/affinity.png" alt="Affinity Photo">
+          <h3>Affinity Photo</h3>
+          <p>Lightweight and powerful photo editing app.</p>
+        </div>
       </div>
     </div>
+  </section>
+
+  <!-- Call To Action -->
+  <section class="cta">
+    <h2>Let's Create Something Amazing Together!</h2>
+    <p>Whether it’s a custom T-shirt, creative video, or stunning design — we’re ready to bring your idea to life.</p>
+    <a href="#contact" class="cta-btn">Contact Us Now</a>
   </section>
 
   <!-- Footer -->
   <footer>
     <div class="footer-container">
       <div class="footer-section">
-        <h4>About Company</h4>
-        <p>Masba Studio specializes in sublimation printing, custom design, and accessories with premium quality and affordable prices.</p>
+        <h4>About Masba Studio</h4>
+        <p>Masba Studio specializes in sublimation printing, graphic design, and creative media — helping brands and individuals express their identity with style.</p>
       </div>
-
       <div class="footer-section">
         <h4>Contact Us</h4>
         <p>📍 Hutan Melintang, Perak</p>
         <p>📞 +6016-859 0975</p>
-        <p>💬 <a href="https://wa.me/60168590975" style="color:#A7C7E7;">Chat via WhatsApp</a></p>
+        <p>💬 <a href="https://wa.me/60168590975" target="_blank" style="color:#A7C7E7;">Chat via WhatsApp</a></p>
       </div>
-
       <div class="footer-section">
-        <h4>Services</h4>
+        <h4>Our Services</h4>
         <ul>
           <li><a href="services.html">Sublimation Printing</a></li>
-          <li><a href="services.html">Custom Design</a></li>
-          <li><a href="services.html">Bulk Orders</a></li>
+          <li><a href="services.html">Graphic Design</a></li>
+          <li><a href="services.html">Video Editing</a></li>
+          <li><a href="services.html">Website Design</a></li>
         </ul>
       </div>
-
       <div class="footer-section">
-        <h4>Others</h4>
+        <h4>Quick Links</h4>
         <ul>
-          <li><a href="products.html">Our Products</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="products.html">Products</a></li>
+          <li><a href="about.html">About Us</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="catalog.html">Catalog</a></li>
         </ul>
       </div>
     </div>
     <p>&copy; 2025 Masba Studio. All Rights Reserved.</p>
   </footer>
+
+<script>
+document.addEventListener("DOMContentLoaded", function () {
+  // Detect mobile device
+  const isMobile = window.matchMedia("(max-width: 768px)").matches;
+
+  // --- AUTO SLIDER (only for mobile) ---
+  if (isMobile) {
+    const sliders = document.querySelectorAll(".services-container, .slider-wrapper");
+
+    sliders.forEach((container) => {
+      let slider = container.querySelector(".slider") || container;
+      let scrollAmount = 0;
+      let interval;
+      const card = slider.querySelector(".service-card, .card");
+      const cardWidth = card ? card.offsetWidth : 250;
+      const gap = 20;
+      const step = cardWidth + gap;
+
+      const startAutoSlide = () => {
+        interval = setInterval(() => {
+          if (scrollAmount + container.offsetWidth >= slider.scrollWidth) {
+            scrollAmount = 0;
+          } else {
+            scrollAmount += step;
+          }
+          slider.scrollTo({ left: scrollAmount, behavior: "smooth" });
+        }, 6000);
+      };
+
+      const stopAutoSlide = () => clearInterval(interval);
+
+      startAutoSlide();
+
+      container.addEventListener("touchstart", stopAutoSlide, { passive: true });
+      container.addEventListener("touchend", startAutoSlide, { passive: true });
+    });
+  }
+
+  // --- MOBILE MENU ---
+  const menuToggle = document.querySelector('.menu-toggle');
+  const navLinks = document.querySelector('.nav-links');
+
+  if (menuToggle && navLinks) {
+    menuToggle.addEventListener('click', () => {
+      navLinks.classList.toggle('active');
+      menuToggle.classList.toggle('open');
+    });
+
+    // Close menu when a link is clicked
+    navLinks.querySelectorAll('a').forEach(link => {
+      link.addEventListener('click', () => navLinks.classList.remove('active'));
+    });
+  }
+});
+</script>
 
   <script src="script.js"></script>
 </body>
