--- a/catalog.html
+++ b/catalog.html
@@ -5,13 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Masba Studio | Catalog</title>
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <link rel="shortcut icon" href="/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-  <meta name="apple-mobile-web-app-title" content="Masba Studio" />
-  <link rel="manifest" href="/site.webmanifest" />
+  <meta name="description" content="Download Masba Studio’s product catalog and T-shirt size chart. Find all details you need for sublimation printing and apparel customization.">
+  <meta name="keywords" content="Masba Studio catalog, T-shirt size chart, printing catalog, PDF download, Malaysia sublimation products">
 
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -22,7 +17,7 @@
     <p>🎁 Free Shipping for orders over RM100</p>
   </div>
 
-  <!-- Header / Navigation -->
+  <!-- Header -->
   <header>
     <div class="logo">
       <img src="images/logo-masbastudio.png" alt="Masba Studio Logo">
@@ -33,77 +28,79 @@
       <a href="index.html">Home</a>
       <a href="products.html">Products</a>
       <a href="services.html">Services</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
+      <a href="about-us.html">About Us</a>
       <a href="catalog.html" class="active">Catalog</a>
     </nav>
   </header>
 
-  <!-- Catalog Section -->
-  <section class="catalog">
-    <h2>Masba Studio Catalog</h2>
-    <p class="subtitle">Download our latest resources and guides for your projects.</p>
+  <!-- Services Section -->
+  <section class="products services">
+  <h2>📚 Masba Studio Catalog</h2>
+  <p class="subtitle">Download our latest product catalog, size charts, and templates to make your project seamless.</p>
+  </section>
 
-    <div class="catalog-container">
-      <div class="catalog-card">
-        <img src="images/catalog-pdf.png" alt="Catalog PDF">
-        <h3>📘 Product Catalog (PDF)</h3>
+  <!-- Catalog Cards Section -->
+  <section class="services" style="padding:60px 20px;">
+    <div class="services-container">
+      <div class="service-card">
+        <img src="images/catalog-pdf.png" alt="Catalog PDF" style="height:150px; object-fit:cover; border-radius:12px;">
+        <h3>📘Product Catalog (PDF)</h3>
         <p>Browse our full range of sublimation T-shirts, designs, and printing options.</p>
         <a href="files/MasbaStudio_Catalog.pdf" download class="btn-download">Download Catalog</a>
       </div>
 
-      <div class="catalog-card">
-        <img src="images/size-chart.jpg" alt="Size Chart">
-        <h3>📏 T-Shirt Size Chart</h3>
+      <div class="service-card">
+        <img src="images/size-chart.jpg" alt="T-Shirt Size Chart" style="height:150px; object-fit:cover; border-radius:12px;">
+        <h3>📏T-Shirt Size Chart</h3>
         <p>Check your perfect fit before ordering custom shirts with Masba Studio.</p>
         <a href="images/size-chart.jpg" download class="btn-download">Download Size Chart</a>
       </div>
 
-      <div class="catalog-card">
-        <img src="images/template-guide.jpg" alt="Template">
-        <h3>🧩 Design Template (Coming Soon)</h3>
+      <div class="service-card">
+        <img src="images/template-guide.jpg" alt="Design Template" style="height:150px; object-fit:cover; border-radius:12px;">
+        <h3>🧩Design Template (Coming Soon)</h3>
         <p>Editable templates to help you create your own sublimation artwork easily.</p>
         <a href="#" class="btn-disabled">Coming Soon</a>
       </div>
     </div>
+  </section>
 
-    <div class="catalog-contact">
-      <h3>Need Custom Quote or Help?</h3>
-      <a href="https://wa.me/60168590975?text=Hi%20Masba%20Studio!%20I'm%20interested%20in%20your%20catalog%20and%20want%20to%20know%20more."
-         target="_blank" class="whatsapp-btn">📲 Chat on WhatsApp</a>
-    </div>
+  <!-- Contact / WhatsApp Section -->
+  <section style="padding:40px 20px; text-align:center;">
+    <h3>Need Custom Quote or Assistance?</h3>
+    <a href="https://wa.me/60168590975?text=Hi%20Masba%20Studio!%20I'm%20interested%20in%20your%20catalog."
+       target="_blank" class="whatsapp-btn">📲 Chat on WhatsApp</a>
   </section>
 
   <!-- Footer -->
   <footer>
     <div class="footer-container">
       <div class="footer-section">
-        <h4>About Company</h4>
-        <p>Masba Studio specializes in sublimation printing, custom design, and accessories with premium quality and affordable prices.</p>
+        <h4>About Masba Studio</h4>
+        <p>Masba Studio specializes in sublimation printing, graphic design, and creative media — helping brands and individuals express their identity with style.</p>
       </div>
-
       <div class="footer-section">
         <h4>Contact Us</h4>
         <p>📍 Hutan Melintang, Perak</p>
         <p>📞 +6016-859 0975</p>
-        <p>💬 <a href="https://wa.me/60168590975" style="color:#A7C7E7;">Chat via WhatsApp</a></p>
+        <p>💬 <a href="https://wa.me/60168590975" target="_blank" style="color:#A7C7E7;">Chat via WhatsApp</a></p>
       </div>
-
       <div class="footer-section">
-        <h4>Services</h4>
+        <h4>Our Services</h4>
         <ul>
           <li><a href="services.html">Sublimation Printing</a></li>
-          <li><a href="services.html">Custom Design</a></li>
-          <li><a href="services.html">Bulk Orders</a></li>
+          <li><a href="services.html">Graphic Design</a></li>
+          <li><a href="services.html">Video Editing</a></li>
+          <li><a href="services.html">Website Design</a></li>
         </ul>
       </div>
-
       <div class="footer-section">
-        <h4>Others</h4>
+        <h4>Quick Links</h4>
         <ul>
-          <li><a href="products.html">Our Products</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="products.html">Products</a></li>
+          <li><a href="about.html">About Us</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="catalog.html">Catalog</a></li>
         </ul>
       </div>
     </div>
@@ -111,7 +108,6 @@
   </footer>
 
   <script>
-    // Mobile menu toggle
     document.querySelector('.menu-toggle').addEventListener('click', () => {
       document.querySelector('.nav-links').classList.toggle('active');
     });
