--- a/products.html
+++ b/products.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Explore Masba Studio’s products — from custom T-shirts to accessories. Order easily and get fast delivery anywhere in Malaysia.">
+  <meta name="keywords" content="Masba Studio products, T-shirt printing, custom apparel Malaysia, sublimation gifts, accessories, online printing shop">
+  <meta name="author" content="Masba Studio">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Masba Studio Products - Custom T-Shirts & Accessories">
+  <meta property="og:description" content="Shop our best-selling sublimation products — premium quality, customizable, and affordable.">
+  <meta property="og:image" content="https://masbastudio.my/images/tshirt1.jpg">
+  <meta property="og:url" content="https://masbastudio.my/products.html">
+  <meta property="og:type" content="product">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://masbastudio.my/products.html">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Masba Studio | Products</title>
@@ -33,54 +49,69 @@
       <a href="index.html">Home</a>
       <a href="products.html" class="active">Products</a>
       <a href="services.html">Services</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
+      <a href="about-us.html">About Us</a>
       <a href="catalog.html">Catalog</a>
     </nav>
   </header>
 
-  <!-- Search Products -->
+  <!-- Products Section -->
   <section class="products">
     <h2>Our Products</h2>
+    <p class="subtitle">Explore our premium sublimation products. Customized for your brand, team, or event.</p>
+
+    <!-- Search Bar -->
     <div class="search-container">
-      <input type="text" id="searchInput" placeholder="Search products...">
+      <input type="text" id="searchInput" placeholder="🔍 Search products...">
     </div>
 
+    <!-- Product Grid -->
     <div class="product-grid" id="productGrid">
+
       <div class="product-card" data-name="Graphic Tee">
         <img src="images/tshirt1.jpg" alt="Graphic Tee">
-        <h3>Graphic Tee</h3>
-        <p><span class="old-price">RM55.00</span> RM40.00</p>
-        <a class="whatsapp-btn" href="https://wa.me/60168590975?text=Hello%20Masba%20Studio!%20I'm%20interested%20in%20Graphic%20Tee%20(RM40.00)" target="_blank">Order via WhatsApp</a>
+        <div class="product-info">
+          <h3>Graphic Tee</h3>
+          <p><span class="old-price">RM55.00</span> <span class="new-price">RM40.00</span></p>
+          <a class="whatsapp-btn" href="https://wa.me/60168590975?text=Hi%20Masba%20Studio!%20I'm%20interested%20in%20Graphic%20Tee%20(RM40.00)" target="_blank">Order via WhatsApp</a>
+        </div>
       </div>
 
       <div class="product-card" data-name="Custom Sublimation">
         <img src="images/tshirt2.jpg" alt="Custom Sublimation">
-        <h3>Custom Sublimation</h3>
-        <p><span class="old-price">RM65.00</span> RM50.00</p>
-        <a class="whatsapp-btn" href="https://wa.me/60168590975?text=Hello%20Masba%20Studio!%20I'm%20interested%20in%20Custom%20Sublimation%20(RM50.00)" target="_blank">Order via WhatsApp</a>
+        <div class="product-info">
+          <h3>Custom Sublimation</h3>
+          <p><span class="old-price">RM65.00</span> <span class="new-price">RM50.00</span></p>
+          <a class="whatsapp-btn" href="https://wa.me/60168590975?text=Hi%20Masba%20Studio!%20I'm%20interested%20in%20Custom%20Sublimation%20(RM50.00)" target="_blank">Order via WhatsApp</a>
+        </div>
       </div>
 
       <div class="product-card" data-name="Sports Jersey">
         <img src="images/tshirt3.jpg" alt="Sports Jersey">
-        <h3>Sports Jersey</h3>
-        <p>RM60.00</p>
-        <a class="whatsapp-btn" href="https://wa.me/60168590975?text=Hello%20Masba%20Studio!%20I'm%20interested%20in%20Sports%20Jersey%20(RM60.00)" target="_blank">Order via WhatsApp</a>
+        <div class="product-info">
+          <h3>Sports Jersey</h3>
+          <p><span class="new-price">RM60.00</span></p>
+          <a class="whatsapp-btn" href="https://wa.me/60168590975?text=Hi%20Masba%20Studio!%20I'm%20interested%20in%20Sports%20Jersey%20(RM60.00)" target="_blank">Order via WhatsApp</a>
+        </div>
       </div>
 
       <div class="product-card" data-name="Button Badge">
         <img src="images/BUTTON BADGE PRINTING.jpg" alt="Button Badge">
-        <h3>Button Badge</h3>
-        <p>RM5.00</p>
-        <a class="whatsapp-btn" href="https://wa.me/60168590975?text=Hello%20Masba%20Studio!%20I'm%20interested%20in%20Button%20Badge%20(RM5.00)" target="_blank">Order via WhatsApp</a>
+        <div class="product-info">
+          <h3>Button Badge</h3>
+          <p><span class="new-price">RM5.00</span></p>
+          <a class="whatsapp-btn" href="https://wa.me/60168590975?text=Hi%20Masba%20Studio!%20I'm%20interested%20in%20Button%20Badge%20(RM5.00)" target="_blank">Order via WhatsApp</a>
+        </div>
       </div>
 
       <div class="product-card" data-name="Lanyard Printing">
         <img src="images/LANYARD + ID CARD PRINTING.png" alt="Lanyard Printing">
-        <h3>Lanyard Printing</h3>
-        <p>RM8.00</p>
-        <a class="whatsapp-btn" href="https://wa.me/60168590975?text=Hello%20Masba%20Studio!%20I'm%20interested%20in%20Lanyard%20Printing%20(RM8.00)" target="_blank">Order via WhatsApp</a>
+        <div class="product-info">
+          <h3>Lanyard Printing</h3>
+          <p><span class="new-price">RM8.00</span></p>
+          <a class="whatsapp-btn" href="https://wa.me/60168590975?text=Hi%20Masba%20Studio!%20I'm%20interested%20in%20Lanyard%20Printing%20(RM8.00)" target="_blank">Order via WhatsApp</a>
+        </div>
       </div>
+
     </div>
   </section>
 
@@ -88,55 +119,55 @@
   <footer>
     <div class="footer-container">
       <div class="footer-section">
-        <h4>About Company</h4>
-        <p>Masba Studio specializes in sublimation printing, custom design, and accessories with premium quality and affordable prices.</p>
+        <h4>About Masba Studio</h4>
+        <p>Masba Studio specializes in sublimation printing, graphic design, and creative media — helping brands and individuals express their identity with style.</p>
       </div>
-
       <div class="footer-section">
         <h4>Contact Us</h4>
         <p>📍 Hutan Melintang, Perak</p>
         <p>📞 +6016-859 0975</p>
-        <p>💬 <a href="https://wa.me/60168590975" style="color:#A7C7E7;">Chat via WhatsApp</a></p>
+        <p>💬 <a href="https://wa.me/60168590975" target="_blank" style="color:#A7C7E7;">Chat via WhatsApp</a></p>
       </div>
-
       <div class="footer-section">
-        <h4>Services</h4>
+        <h4>Our Services</h4>
         <ul>
           <li><a href="services.html">Sublimation Printing</a></li>
-          <li><a href="services.html">Custom Design</a></li>
-          <li><a href="services.html">Bulk Orders</a></li>
+          <li><a href="services.html">Graphic Design</a></li>
+          <li><a href="services.html">Video Editing</a></li>
+          <li><a href="services.html">Website Design</a></li>
         </ul>
       </div>
-
       <div class="footer-section">
-        <h4>Others</h4>
+        <h4>Quick Links</h4>
         <ul>
-          <li><a href="products.html">Our Products</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="products.html">Products</a></li>
+          <li><a href="about.html">About Us</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="catalog.html">Catalog</a></li>
         </ul>
       </div>
     </div>
     <p>&copy; 2025 Masba Studio. All Rights Reserved.</p>
   </footer>
 
-<script>
-  // Mobile menu toggle
-  document.querySelector('.menu-toggle').addEventListener('click', () => {
-    document.querySelector('.nav-links').classList.toggle('active');
-  });
-
-  // Product search filter
-  const searchInput = document.getElementById('searchInput');
-  const productCards = document.querySelectorAll('.product-card');
-  searchInput.addEventListener('keyup', function() {
-    const term = this.value.toLowerCase();
-    productCards.forEach(card => {
-      const name = card.getAttribute('data-name').toLowerCase();
-      card.style.display = name.includes(term) ? 'block' : 'none';
+  <!-- Script -->
+  <script>
+    // Mobile menu toggle
+    document.querySelector('.menu-toggle').addEventListener('click', () => {
+      document.querySelector('.nav-links').classList.toggle('active');
     });
-  });
-</script>
+
+    // Product search filter
+    const searchInput = document.getElementById('searchInput');
+    const productCards = document.querySelectorAll('.product-card');
+    searchInput.addEventListener('keyup', function() {
+      const term = this.value.toLowerCase();
+      productCards.forEach(card => {
+        const name = card.getAttribute('data-name').toLowerCase();
+        card.style.display = name.includes(term) ? 'block' : 'none';
+      });
+    });
+  </script>
 
 </body>
 </html>
